--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   pinput: ^5.0.0
   intl: ^0.19.0
+  geolocator: ^12.0.0
+  permission_handler: ^11.3.1
   flutter_localizations:
     sdk: flutter
 
